# anti_overwriting

./: Cargo.toml
src/: fs.rs  main.rs
src/sys/: mod.rs
src/sys/pal/: mod.rs
src/sys/pal/unix/: fs.rs
src/sys/pal/unsupported/: fs.rs
src/sys/pal/windows/: fs.rs
